--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap');
+
 .blog-header, .blog-post, .blog-pagination {
   margin-bottom: 2rem;
 }
@@ -5,4 +7,12 @@
 /* Make sure the image size is reasonable. */
 .blog-post img {
   max-width: 100%;
+}
+
+#top-stripe {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 16px;
+  background-color: green;
+  height: 20px;
+  width: 100%;
 }
